# agentic_ai_research

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
docker/: entrypoint.sh
src/airesearch/: agents.py  planning_agent.py  research_tools.py
