[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-research"
version = "0.1.0"
description = "Reflective Research Agent (FastAPI + Postgres, single container)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "jinja2",
    "openai",
    "tavily-python",
    "wikipedia",
    "requests",
    "aisuite",
    "docstring-parser",
    "pdfminer.six",
    "pymupdf",
]

[tool.setuptools]
packages = []
