[project]
name = "agentic-ai-research"
version = "0.1.0"
description = "Reflective Research Agent (FastAPI + Postgres, single container)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "jinja2",
    "openai",
    "tavily-python",
    "wikipedia",
    "requests",
    "aisuite",
    "docstring-parser",
    "pdfminer.six",
    "pymupdf",
    "defusedxml>=0.7.1",
    "types-defusedxml>=0.7.0.20260504",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "nbmake",
    "nbqa",
    "mypy",
    "pre-commit",
    "httpx>=0.28.1",
    "uv==0.8.9",
    "poethepoet==0.37.0",
    "joblib-stubs==1.5.0.1.20250510",
]
lint = [
    "pre-commit==4.3.0",
    "pre-commit-uv==4.1.4",
]
versioning = [
    "python-semantic-release==10.3.1",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch-cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src/airesearch"]

#########################
# RUFF
#########################

[tool.ruff]
line-length = 100
target-version = "py310"
extend-include = ["*.ipynb"]
fix = true
preview = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["ALL"]

ignore = [
    "D",      # pydocstyle
    "N",      # variable names
    "CPY",    # copyright notices
    "S101",
    "ISC001",
    "ANN401",
    "COM812",
]

[tool.ruff.format]
# Set Ruff to imitate Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["F401"]

#########################
# MyPy
#########################

[tool.mypy]
strict = true
follow_imports = "normal"
python_version = "3.10"

disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true

ignore_missing_imports = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["google.*", "fitz", "wikipedia", "tavily", "tavily.errors", "aisuite"]
ignore_missing_imports = true

#########################
# Bandit
#########################

[tool.bandit]
skips = ["B101"]

#########################
# Pylint
#########################

[tool.pylint.main]
extension-pkg-whitelist = ["mypy", "dependency_injector"]
fail-on = ["I"]
fail-under = 10
ignore = []
ignore-paths = []
jobs = 0
limit-inference-results = 1000
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.code_style",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.docparams",
    "pylint.extensions.dunder",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.magic_value",
    "pylint.extensions.mccabe",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
    "pylint_pydantic",
]
py-version = "3.10"
suggestion-mode = true

[tool.pylint.basic]
argument-naming-style = "snake_case"
argument-rgx = "[a-z_][a-z0-9_]{2,30}$"
attr-naming-style = "snake_case"
attr-rgx = "[a-z_][a-z0-9_]{2,30}$"
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]

class-attribute-naming-style = "any"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
const-naming-style = "UPPER_CASE"
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
docstring-min-length = -1
function-naming-style = "snake_case"
function-rgx = "[a-z_][a-z0-9_]{2,30}$"
good-names = ["i", "j", "k", "ex", "Run", "_"]
include-naming-hint = true

inlinevar-naming-style = "any"
inlinevar-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
method-naming-style = "snake_case"
method-rgx = "[a-z_][a-z0-9_]{2,30}$"
module-naming-style = "snake_case"
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
no-docstring-rgx = "^_"
property-classes = ["abc.abstractproperty"]
variable-naming-style = "snake_case"
variable-rgx = "[a-z_][a-z0-9_]{2,30}$"

[tool.pylint.classes]
defining-attr-methods = ["__init__", "__new__", "setUp"]
exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make"]
valid-classmethod-first-arg = ["cls"]
valid-metaclass-classmethod-first-arg = ["mcs"]

[tool.pylint.deprecated_builtins]
bad-functions = ["map", "filter"]

[tool.pylint.design]
max-args = 7
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-complexity = 10
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50

[tool.pylint.exceptions]
overgeneral-exceptions = ["'builtins.Exception'"]

[tool.pylint.format]
indent-after-paren = 4
indent-string = "    "
max-line-length = 120
max-module-lines = 400


[tool.pylint.imports]
deprecated-modules = ["regsub", "TERMIOS", "Bastion", "rexec"]
known-third-party = ["enchant"]


[tool.pylint.logging]
logging-format-style = "old"

logging-modules = ["logging"]

[tool.pylint."messages control"]
confidence = [
    "HIGH",
    "CONTROL_FLOW",
    "INFERENCE",
    "INFERENCE_FAILURE",
    "UNDEFINED",
]

disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "subprocess-run-check",
    "redefined-outer-name",                   # Incompatible with PyTest fixtures
    "consider-using-assignment-expr",         # Too new syntax
    "unused-import",                          # Check and fix by Ruff
    "unused-variable",                        # Too many false positives
    "invalid-name",                           # Too many false positives
    "not-an-iterable",                        # Too many false positives
    "assignment-from-no-return",              # Too many false positives
    "magic-value-comparison",
    "consider-using-namedtuple-or-dataclass",
]

enable = [
    "bad-inline-option",
    "file-ignored",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "deprecated-pragma",
    "file-ignored",
]

#########################
# Semantic Release
#########################

[tool.semantic_release.branches.main]
match = "*"

[tool.semantic_release]
commit_message = "chore(release): bump version and update changelog"
version_source = "tag"
version_variables = ["src/app/__init__.py:__version__"]
version_toml = [
    "pyproject.toml:project.version:nf",
]
allow_zero_version = true

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore*", "Merge*"]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["chore", "feat", "fix"]
minor_tags = ["feat"]
patch_tags = ["fix"]

#########################
# Pytest
#########################

[tool.pytest.ini_options]
addopts = [
    "-r=A",
    "--doctest-modules",
    "--junitxml=pytest-report.xml",
    "--cov=.",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "-vvv",
]
testpaths = ["tests"]

[tool.poe.tasks]
lint = { shell = "ruff check . && ruff format --check ." }
fmt = "ruff format ."
typecheck = "mypy src"
nbtest = { cmd = "pytest --nbmake notebooks --ignore=notebooks/colab_downloader.ipynb", env = { USE_MOCK_LLM = "true" } }
test = "pytest tests"
check = ["lint", "typecheck"]
serve = "uvicorn semantic_ai_agent.api.app:app --reload --port 8000"
precommit = "uv run pre-commit run --all-files --verbose"
precommit-update = "uv run pre-commit run --hook-stage manual pre-commit-update"

